[CrOS MultiDevice] Require fresh reads for syncs in some cases.

Before this CL, stale reads were allowed for GetMyDevicesRequests in
most cases. This CL updates that logic such that fresh reads are
required when we expect that data was very recently changed (e.g., when
a feature has just been toggled).

Bug: 913618
Change-Id: I9c515b7ce7da56f790fdede7443bfc7cc9e5ee73
Reviewed-on: https://chromium-review.googlesource.com/c/1407962
Reviewed-by: Jeremy Klein <jlklein@chromium.org>
Commit-Queue: Kyle Horimoto <khorimoto@chromium.org>
Commit-Queue: Andrii Shyshkalov <tandrii@chromium.org>
Cr-Commit-Position: refs/heads/master@{#622682}
Former-commit-id: 7d3e24d74083aab6a8adb0d21f754cc0ae3dc8c3